last commit setting up boxes with flexbox

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <div class="fitem fif">15</div>
         <div class="fitem mn">minutes</div>
     </div>
-    
+
+    <div class="flex1 container4">
+        <div class="fitem rect">Parallele</div>
+        <div class="fitem rect2">Deux</div>
+    </div>
+
 </body>
 </html>
