new flex inside rect

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
         <div class="fitem in">in</div>
         <div class="fitem fif">15</div>
         <div class="fitem mn">minutes</div>
+        <div class="axis main-axis"></div>
+        <div class="axis cross-axis"></div>
     </div>
 
     <div class="flex1 container4">
         <div class="fitem rect">Parallele</div>
-        <div class="fitem rect2">Deux</div>
+        <div class="deux">
+            <div class="fitem rect2">Deux</div>
+            <div class="fitem rect3">Trois</div>
+        </div>
+
     </div>
 
 </body>
